# mutational_signatures

./: README.md  main.py  pyproject.toml
data_frame_columns/: Biomart.py  Cosmic.py  Extra.py  OncoKb.py
driver_mutations/: predict_drivers.py
pandas_tools/: batch_read.py  column_operations.py  data.py  log.py  row_operations.py  unique_count.py
process_data/: __init__.py  cancer_gene_info.py  cosmic_GSM.py  cosmic_samples.py  cosmic_transcripts.py  data.py  filter_GSM.py  filter_oncokb_genes.py  filter_samples.py  gene_lengths.py  oncokb_genes.py  processed_GSM.py  retrieve_cancer_genes.py
tests/: Cosmic_Classification_v99_GRCh38.tsv  driver_mutations.tsv  kras_braf_fasta.txt  kras_braf_transcripts.tsv  problem.tsv  test.tsv  test_cosmic_transcripts.py
tools/: analysis.py  create_vcfs.py  individual_sigprofiler.py  kras_investigation.py  mistakes.py  multi_sample_vcfs.py  predict_drivers.py  process_raw_gsm.py  sigprofiler.py
